tests/grammar/valid/34_OperatorBitOrAssign.c
#include <stdint.h>
#include <stdio.h>

void main() {
   int32_t a;
   a = 1;
   a |= 2;
}
