tests/grammar/invalid/02_SyntaxError_TwoOperands.c
#include <stdint.h>
#include <stdio.h>

void main() {
   1 2;
}
